renamed birth to birth_asexual event

--- a/experiments/consumer-resource/interferring_predator_prey.ipynb
+++ b/experiments/consumer-resource/interferring_predator_prey.ipynb
@@ -44,6 +44,7 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "# import necessary modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -71,7 +72,7 @@
     "from iebm.traits.static_trait import StaticTrait\n",
     "from iebm.traits.linked_trait import LinkedTrait\n",
     "# import BirthEvent for the prey\n",
-    "from iebm.events.birth import BirthEvent\n",
+    "from iebm.events.birth_asexual import BirthAsexualEvent\n",
     "# import DeathEvent for the predator\n",
     "from iebm.events.death import DeathEvent\n",
     "# movement is simulated by time to boundary (wall) events\n",
@@ -145,9 +146,9 @@
     "                                 'link_trait' : 'radius', \n",
     "                                 'link_func' : lambda x : x})]\n",
     "\n",
-    "    event_prey = [(BirthEvent, {'name' : 'birth' , \n",
-    "                                'is_primary' : True,\n",
-    "                                'current_time' : 0}), \n",
+    "    event_prey = [(BirthAsexualEvent, {'name' : 'birth' , \n",
+    "                                       'is_primary' : True,\n",
+    "                                       'current_time' : 0}), \n",
     "                  (DeathEvent, {'name' : 'death', \n",
     "                                'is_primary' : False, \n",
     "                                'current_time' : 0})]\n",
@@ -191,9 +192,9 @@
     "                  (Pause2DEvent, {'name' : 'stoppage',\n",
     "                                  'ignore_list' : ['death'],\n",
     "                                  'is_primary' : False}),\n",
-    "                  (BirthEvent, {'name' : 'birth', \n",
-    "                                'is_primary' : False, \n",
-    "                                'current_time' : 0})]   \n",
+    "                  (BirthAsexualEvent, {'name' : 'birth', \n",
+    "                                       'is_primary' : False, \n",
+    "                                       'current_time' : 0})]   \n",
     "    \n",
     "    return prey, pred, trait_prey, trait_pred, event_prey, event_pred"
    ]
@@ -540,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
