--- a/experiments/consumer-resource/rosenzweig_macarthur.ipynb
+++ b/experiments/consumer-resource/rosenzweig_macarthur.ipynb
@@ -53,13 +53,14 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "# import necessary modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import integrate\n",
     "from multiprocessing import Pool\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm import tqdm\n",
     "import warnings\n",
     "\n",
     "# import datatime to set threads to 1\n",
@@ -263,8 +264,8 @@
     "# import Trait classes to set up Events\n",
     "from iebm.traits.static_trait import StaticTrait\n",
     "from iebm.traits.linked_trait import LinkedTrait\n",
-    "# import BirthEvent for the prey\n",
-    "from iebm.events.birth import BirthEvent\n",
+    "# import BirthAsexualEvent for the prey\n",
+    "from iebm.events.birth_asexual import BirthAsexualEvent\n",
     "# import DeathEvent for the predator\n",
     "from iebm.events.death import DeathEvent\n",
     "# movement is simulated by time to boundary (wall) events\n",
@@ -302,9 +303,9 @@
     "                                 'link_trait' : 'radius', \n",
     "                                 'link_func' : lambda x : x})]\n",
     "\n",
-    "    event_prey = [(BirthEvent, {'name' : 'birth' , \n",
-    "                                'is_primary' : True,\n",
-    "                                'current_time' : 0}), \n",
+    "    event_prey = [(BirthAsexualEvent, {'name' : 'birth' , \n",
+    "                                       'is_primary' : True,\n",
+    "                                       'current_time' : 0}), \n",
     "                  (DeathEvent, {'name' : 'death', \n",
     "                                'is_primary' : False, \n",
     "                                'current_time' : 0})]\n",
@@ -342,9 +343,9 @@
     "                  (Pause2DEvent, {'name' : 'handling',\n",
     "                                  'ignore_list' : ['death'],\n",
     "                                  'is_primary' : False}),\n",
-    "                  (BirthEvent, {'name' : 'birth', \n",
-    "                                'is_primary' : False, \n",
-    "                                'current_time' : 0})]   \n",
+    "                  (BirthAsexualEvent, {'name' : 'birth', \n",
+    "                                       'is_primary' : False, \n",
+    "                                       'current_time' : 0})]   \n",
     "    \n",
     "    return prey, pred, trait_prey, trait_pred, event_prey, event_pred"
    ]
@@ -614,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
